Rotas protegidas e autenticação criada e documentada, algumas regras de negócio validadas. Issues #2, #6, #7, #17, #18 e 19 completos. ~por Yaakov
