# src/Models/CartModel.js
@@ -7,7 +7,7 @@ const cartSchema = new mongoose.Schema({
         type: String,
         required: true,
       },
-      preco: {
+      price: {
         type: Number,
         required: true,
       },
