# src/Models/ProductModel.js
@@ -5,7 +5,7 @@ const ProductSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
-  preco: {
+  price: {
     type: Number,
     required: true,
   },
